Fixed the search form on mobile for portals

--- a/_portails.scss
+++ b/_portails.scss
@@ -361,4 +361,8 @@
         width: 80%;
         margin-left: 10%;
     }
+
+    div#neayi-searchform {
+        margin          : 0 0;
+    }
 }
